[gd_scene load_steps=2 format=3 uid="uid://error_dialog"]

[ext_resource type="Script" path="res://ui/ErrorDialog.gd" id="1_error"]

[node name="ErrorDialog" type="CanvasLayer"]
layer = 1000
script = ExtResource("1_error")

[node name="Panel" type="Panel" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Hata"
horizontal_alignment = 1

[node name="MessageLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
autowrap_mode = 3
fit_content = true
text = "Hata mesajı burada görünecek"

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="OKButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Tamam"
theme_override_font_sizes/font_size = 20

[connection signal="pressed" from="Panel/VBoxContainer/ButtonContainer/OKButton" to="." method="_on_ok_pressed"]

